Fixed scrollbar, occured twice at home screen (mobile view)

--- a/client/components/main/layouts.styl
+++ b/client/components/main/layouts.styl
@@ -433,7 +433,7 @@ a
       margin-top: 0px
 
   .wrapper
-    height: 100%
+    height: calc(100% - 31px)
     margin: 0px
 
   .panel-default
